[project]
name = "master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.3.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pdflatex>=0.1.3",
    "pillow>=12.0.0",
    "pylatexenc>=2.10",
    "qiskit==1.4",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "qiskit-ibm-runtime>=0.36.1",
    "qiskit-machine-learning[torch]>=0.8.2",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
